<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/EditText1"
        android:layout_width="295dp"
        android:layout_height="42dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="19dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/Spinner1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/Spinner1"
        android:layout_width="250dp"
        android:layout_height="37dp"
        android:layout_marginBottom="484dp"
        app:layout_constraintBottom_toTopOf="@+id/Button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText1" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_marginTop="96dp"
        android:onClick="onButton1Click"
        android:text="@string/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Spinner1" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textview1_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button1" />

</androidx.constraintlayout.widget.ConstraintLayout>