<resources>
    <string name="app_name">Lab4</string>
    <string name="my_notes">My Notes:</string>
    <string name="empty">Empty</string>
    <string name="add_note_option">Add Note</string>
    <string name="remove_note_option">Remove Note</string>
    <string name="save_and_close">Save and Close</string>
    <string name="title">Title:</string>
    <string name="content">Content</string>
    <string name="creating_a_new_note">Creating a new Note:</string>
    <string name="select_the_note_to_remove">Select the Note to remove:</string>
</resources>